--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,34 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.10"
+    ext {
+        kotlin_version = "1.5.10"
+        appcompat_version = "1.1.0"
+        core_ktx_version = "1.3.2"
+        constraint_version = "2.0.4"
+        legacy_support_version = "1.0.0"
+        junit_version = "4.13.1"
+        androidx_junit_version = "1.1.2"
+        espresso_version = "3.3.0"
+        multidex_version = "2.0.1"
+
+        cardview_version = "1.0.0"
+        recyclerview_version = "1.1.0"
+        material_version = "1.2.1"
+        glide_version = "4.11.0"
+
+        room_version = "2.2.6"
+
+        retrofit_version = "2.9.0"
+        logging_interceptor_version = '4.9.0'
+
+        kotlin_coroutines_version = "1.4.2"
+        lifecycle_version = "2.2.0"
+
+        activity_ktx_version = "1.1.0"
+        fragment_ktx_version = '1.2.5'
+
+        hilt_version = '2.36'
+    }
     repositories {
         google()
         mavenCentral()
@@ -11,6 +39,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
